National: fixed overlapping text in record meta data "more" link. Disabled sfx links on results page.

--- a/web/interface/themes/national/css/default.css
+++ b/web/interface/themes/national/css/default.css
@@ -877,6 +877,10 @@ div.truncateField {
     height: 1.5em;
     background-color: inherit;
 }
+#recordMetadata .moreLink a,
+#recordMetadata .lessLink a {
+    background:#fff;
+}
 .recordSummary.truncateField .moreLink,
 .recordSummary.truncateField .lessLink {
     display: block;
@@ -2511,7 +2515,6 @@ div.resultLinks a {
     float: left;
 }
 #resultToolbar ul {
-    border-top: 2px solid #EEEEEE;
     padding: 0;
     margin: 0;
     padding-top: 1em;
@@ -2592,6 +2595,8 @@ a#thumbnail_link:hover span {
 }
 .coverImages {
     /* text-align:center; */
+    overflow: auto;
+    border-bottom: 2px solid #eee;
 }
 .coverImageLinks a {
     display: inline-block;
